--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,20 +1,13 @@
-FROM postgres:9.4
-
-MAINTAINER Alessandro Fael Garcia <alessfg@hotmail.com>
+FROM postgres:9.4-alpine
 
 LABEL EtherCIS-Version="1.1.0" \
-      Description="Docker image for the EtherCIS database"
+      Description="Docker image for the EtherCIS database" \
+      Vendor="Inidus" \
+      License=MIT \
+      Version=0.0.3 \
+      Maintainer="Inidus <cloud-ops@inidus.io>"
 
-# The following list of commands is executed in the same RUN block to
-# save as much space as possible in the final Docker image
-# Get packages necessary to install required extensions for EtherCIS database
-RUN apt-get update && apt-get install -y \
-	bison \
-	flex \
-	gcc \
-	git \
-	postgresql-server-dev-9.4 \
-	make \
+RUN apk add --no-cache build-base postgresql-dev bison flex git \
 # Install temporal tables extension
   && git clone https://github.com/arkhipov/temporal_tables \
   && cd temporal_tables \
@@ -30,16 +23,9 @@ RUN apt-get update && apt-get install -y \
 	&& cd .. \
 	&& rm -rf jsquery \
 # Remove no longer required packages
-  && apt-get purge -y \
-	bison \
-	flex \
-	gcc \
-	git \
-	postgresql-server-dev-9.4 \
-	make \
-	&& apt-get autoremove -y
+  && apk del build-base postgresql-dev git
 
 # Copy files required to initialise Postgres with the EtherCIS database schema
-COPY ./scripts ./scripts
+#COPY ./scripts ./scripts
 COPY ./01_db_creation.sh ./docker-entrypoint-initdb.d/01_db_creation.sh
-COPY ./02_db_init.sh ./docker-entrypoint-initdb.d/02_db_init.sh
+#COPY ./02_db_init.sh ./docker-entrypoint-initdb.d/02_db_init.sh
